--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -21,6 +22,7 @@
     "start:js": "react-scripts start",
     "start:css": "npx tailwindcss -i ./tailwind.css -o ./src/index.css --jit -w"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
