--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "start": "concurrently npm:start:*",
     "start:js": "react-scripts start",
-    "start:css": "npx tailwindcss -i ./tailwind.css -o ./src/index.css --jit -w"
+    "start:css": "npx tailwindcss -i ./tailwind.css -o ./src/index.css --jit -w",
+    "build": "react-scripts build"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
